Changelog
=========

4.6.3 (unreleased)
------------------

- Add icons for latest review types on artium homepage #SCR-1049
- Dedicated views for "latest reviews" and "latest review sections" with
  headings and without full text search. #SCR-1050
- Minor text and style adjustments. #SCR-1050


4.6.2 (2020-08-27)
------------------

- Restored mainimage_en.png and mainimage_fr.png which had been accidentally
  cleaned out. #FLOW-755


4.6.1 (2020-08-27)
------------------

- Show all review types in "latest reviews online" #HELP-2332


4.6.0 (2020-07-20)
------------------

- Fixed OPAC import for daughter portals. #FLOW-770
- Author Search: Fixed links to works of specific authors. #FLOW-947
- Browsing/Search: Tweaked results display. #SCR-338 #SCR-345 #SCR-402
- Search: Hide languages that don't occur in the results. #SCR-391
- Search: Extended raj result #SCR-457
- Review Exhibition: Support for permanent exhibitons. #SCR-340 #SCR-392
- Author Search: Sort entries per column, not per row. #SCR-342 #SCR-370
- Author Search: Sort according to Unicode Collation Algorithm (UCA). #SCR-342
- Author Search: Alphabet index larger. #SCR-342
- Author Search: Fixed "0 results" for authors with only last name or only 
  first name. #SCR-343


4.5.0 (2019-09-26)
------------------

- Support for SWB SRU search. #FLOW-650
- Support for new content types. #FLOW-649


4.4.0 (2019-06-05)
------------------

- Publication viewlet: Sort on parent position. #FLOW-229
- Publication viewlet: Sped up review display by doing sorting in catalog
  query. #FLOW-198
- OPAC search: Fixes for results box. #FLOW-328
- Search: Tweaked text and layout. #FLOW-436
- Search: Fixed error when cross-portal search is used with non-ascii
  characters. #FLOW-397
- Search/Browsing: Support for multipart titles. #FLOW-520
- Post-its: Exchanged images (contact instead of latest comments). #FLOW-435
- Publication RSS: Sort on effective. #FLOW-230